--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
-.App {
+.square-container {
+  display: grid;
+  grid-template-columns: repeat(3, 200px);
+  grid-template-rows: repeat(3, 200px);
+  grid-gap: 1em;
   text-align: center;
+}
+
+.square {
+  background:tomato;
+  padding: 5em;
+  color: tomato
+}
+
+.square:hover{
+  background: blue;
 }
